# TextEtractionForTable

./: file.txt  file1.csv  file_csv.csv  main.py  people.csv  pyproject.toml
Remover/: Extracted_Text.txt  Extracted_Text_sample_document_1_0_0.csv  Extracted_Text_sample_document_2_0_0.csv  Extracted_Text_sample_document_2_0_2.csv  NoiseRemover.py
TextExtraction/: Extracted Text.csv  TextExtraon.py
