[tool.poetry]
name = "textetractionfortable"
version = "0.1.0"
description = ""
authors = ["dkrish <dinesh.krishna@zucisystems.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
